@@ -1,7 +1,9 @@
 2015-02-26  Katsumi Yamaoka  <yamaoka@jpl.org>
 
-	* gnus-art.el (gnus-article-edit-part): Make jumping to the next part
-	really work when deleting or stripping.
+	* gnus-art.el (gnus-mime-inline-part, gnus-mm-display-part):
+	Fix point motion when removing displayed MIME part.
+	(gnus-article-edit-part): Make jumping to the next part really work
+	when deleting or stripping.
 	(gnus-mime-buttonize-attachments-in-header): Make header attachment
 	buttons identical to the ones in the article body so as to work deleting
 	and stripping.
